--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     </a>
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#homero">Homero</a></li>
-                      <li><a class="dropdown-item" href="#">Marge</a></li>
+                      <li><a class="dropdown-item" href="#marge">Marge</a></li>
                       <li><hr class="dropdown-divider"></li>
                       <li><a class="dropdown-item" href="#">Bart y Lisa </a></li>
                     </ul>
@@ -82,10 +82,10 @@
               </div>
           </div>
           <div class="row" id="homero">
-              <div class="col-6 ima">
+              <div class="col-xs-12 col-md-12 col-xl-6 ima">
                   <img src="images/homer.png" alt="" height="96%" width="96%">
               </div>
-              <div class="col-6 desc">
+              <div class="col-xs-12 col-md-12 col-xl-6 desc">
                   <h1 class="titu">Homero</h1>
                   <p class="des">Homer Jay Simpson. Es el padre de la familia protagonista y uno de los personajes centrales más importantes de la serie (Fue creado por el dibujante Matt Groening).</p>
                   <a href="https://es.wikipedia.org/wiki/Homer_Simpson" class="link">Ver más.</a>
@@ -99,6 +99,26 @@
                     </div>
               </div>
           </div>
+          <div class="row" id="marge">
+            <div class="col-xs-12 col-md-12 col-xl-6 ima">
+              <h1 class="titu">Homero</h1>
+              <p class="des">Homer Jay Simpson. Es el padre de la familia protagonista y uno de los personajes centrales más importantes de la serie (Fue creado por el dibujante Matt Groening).</p>
+              <a href="https://es.wikipedia.org/wiki/Homer_Simpson" class="link">Ver más.</a>
+                <div class="conv">
+                  <div class="calin">
+                    <iframe width="450" height="240" src="https://www.youtube.com/embed/btfMvd_ts7I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+                  </div>
+                </div>
+                <div class="buton">
+                  <a class="btn btn-primary" href="#marge" role="button">Siguiente</a>
+                  <a class="btn btn-primary" href="#homero" role="button">Anterior</a>
+                </div>
+            </div>
+            <div class="col-xs-12 col-md-12 col-xl-6 desc">
+                <img src="images/marge.png" alt="" height="96%" width="96%">
+                
+            </div>
+        </div>
       </div>
     </div>
 
